--- a/setting.yaml
+++ b/setting.yaml
@@ -1,2 +1,8 @@
+---
 box_config_file: repo/box.yaml
 networking_template_file: repo/template.yaml
+
+sdn_controller:
+  ipaddr: "10.246.67.127"
+  id: "admin"
+  pw: "admin"
