--- a/repo/template.yaml
+++ b/repo/template.yaml
@@ -15,5 +15,10 @@
 
 - type: flow
   target: ovs-test.br-test2
+  end1: ovs-test.br-test1
+  end2: ovs-test.br-test3
+
+- type: flow
+  target: ovs-test.br-test2
   end1: ovs-test.br-test3
   end2: ovs-test.br-test1
