--- a/setting.yaml
+++ b/setting.yaml
@@ -1,6 +1,6 @@
 ---
-box_config_file: repo/box.yaml
-networking_template_file: repo/template.yaml
+box_information: repo/box.yaml
+networking_template: repo/template.yaml
 
 sdn_controller:
   ipaddr: "10.246.67.127"
