--- a/repo/template.yaml
+++ b/repo/template.yaml
@@ -1,17 +1,30 @@
+# All elements in Template consist of 5 fields --> type / target / end1 / end2 / opt
+# type: bridge / port / patch / vxlan / flow
+# target / end1 / end2: box.bridge
+# opt: dict
+
 - type: bridge
-  target: ovs-test
-  bridge:
-    - br-test1
-    - br-test2
-    - br-test3
+  target: ovs-test.br-test1
+
+- type: bridge
+  target: ovs-test.br-test2
+
+- type: bridge
+  target: ovs-test.br-test3
+
+- type: bridge
+  target: ovs-test2.br-test1
+
+- type: port
+  target: ovs-test.br-test1.test_port
 
 - type: patch
   end1: ovs-test.br-test1
   end2: ovs-test.br-test2
 
-- type: patch
-  end1: ovs-test.br-test2
-  end2: ovs-test.br-test3
+- type: vxlan
+  end1: ovs-test.br-test1
+  end2: ovs-test2.br-test1
 
 - type: flow
   target: ovs-test.br-test2
